# adaptive_predicates

./: .gitmodules  .travis.yml  CMakeLists.txt  CMakePresets.json  README  README.md
.github/workflows/: CMakeUserPresets.json  ci.yml
cmake/: CompilerFlags.cmake
examples/: CMakeLists.txt
examples/generate_cases/: CMakeLists.txt  generate_cases.cpp  generate_cases.hpp  generate_incircle2d_case.cpp  generate_incircle3d_case.cpp  generate_orient2d_case.cpp  generate_orient3d_case.cpp
examples/point_inclusion/: CMakeLists.txt  point_inclusion.cpp
src/: ae_adaptive_predicate_eval.hpp  ae_expr.hpp  ae_expr_fmt.hpp  ae_expr_io.hpp  ae_expr_iostream.hpp  ae_expr_print.hpp  ae_expr_utils.hpp  ae_fp_eval.hpp  ae_fp_eval_impl.hpp  ae_geom_exprs.hpp  ae_gpu_scalar.hpp  ae_gpu_vector.hpp  fixed_point.hpp
tests/: CMakeLists.txt  double_testing_data.hpp  float_testing_data.hpp  generate_cases.cpp  generate_incircle3d_cases.cpp  generate_orient2d_cases.cpp  perf_benchmark.cpp  test_adaptive_expr.cpp  test_benchmarks.cpp  test_determinant_4x4.cpp  test_determinant_5x5.cpp  test_exact_eval.cpp  test_geom_exprs.cpp  test_matrix.cpp  testing_data.hpp  testing_utils.hpp
